# capstone-agentic_ai

./: README.md  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  docker-compose.yaml  gcloudignore  pyproject.toml
backend/: .env  .env.example  Dockerfile  app.py  model_config.py  models.py  pyproject.toml
backend/academic_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/agents/: context_fetcher.py  critic.py  decomposer.py  orchestrator.py  tutor.py
backend/tools/: arxiv_fetcher.py  pdf_parser.py  semantic_scholar.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  @ungap.js  bail.js  character-entities.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  dequal.js  devlop.js  estree-util-is-identifier-name.js  extend.js  has-flag.js  hast-util-to-jsx-runtime.js  hast-util-whitespace.js  html-url-attributes.js  inline-style-parser.js  is-plain-obj.js  lucide-react.js  mdast-util-from-markdown.js  mdast-util-to-hast.js  mdast-util-to-string.js  micromark-core-commonmark.js  micromark-util-encode.js  (+37 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CriticPanel.tsx  Decomposition.tsx  PaperInput.tsx  QuizModal.tsx  RelatedWork.tsx  TutorChat.tsx
frontend/src/lib/: api.ts
(+18 files in other folders)
